--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -54,6 +54,11 @@ span {
   font-size: .7rem;
 }
 
+.footer-copy  a {
+  text-decoration: none;
+  font-weight: bolder;
+}
+
 @media screen and (min-width: 320px) and (max-width:760px) {
   .footer {
     min-width: 393px;
