ajustes nos elementos e criação de nova section

--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,3 +1,7 @@
+<div class="section-name">
+  <h2>Destaques</h2>
+</div><br>
+
 <div class="small-card__container">
   <a class="small-card">
     <div class="small-card__img">
@@ -56,3 +60,72 @@
     </div>
   </a>
 </div><br>
+
+<!--Seção semi-novas-->
+
+<div class="section-name">
+  <h2>Semi-novas</h2>
+</div>
+
+<div class="small-card__container">
+  <a class="small-card">
+    <div class="small-card__img">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVqrRAa6-3Xh1-sxZGdR8h2moVavYppBAqiQ&usqp=CAU"
+        alt="" width="250px">
+    </div>
+    <div class="small-card__head">
+      <h3>Honda CBR 1000 RR</h3>
+    </div>
+    <div class="small-card__content">
+      <p>49.990,00 + frete</p><br>
+      <p>Motor 998 CC.</p>
+      <p>Chassi diamantado</p>
+    </div>
+  </a>
+
+  <a class="small-card">
+    <div class="small-card__img">
+      <img src="https://motonewsbrasil.com/wp-content/uploads/2019/03/yamaha-mt-15-7.jpg"
+        alt="" width="250px">
+    </div>
+    <div class="small-card__head">
+      <h3>YAMAHA MT 15</h3>
+    </div>
+    <div class="small-card__content">
+      <p>R$ 50.990,00 + frete</p><br>
+      <p>Motor 149 CC</p>
+      <p>Indicador de pilotagem econômica.</p><br>
+    </div>
+  </a>
+
+  <a class="small-card">
+    <div class="small-card__img">
+      <img src="https://motobr.files.wordpress.com/2011/08/bandit_992.jpg"
+        alt="" width="250px">
+    </div>
+    <div class="small-card__head">
+      <h3>SUZUKI BANDIT 1200 S</h3>
+    </div><br><br>
+    <div class="small-card__content">
+      <p>R$ 93.990,00 + frete</p>
+      <p>Ano 2008 com baxíssima KM</p>
+      <p>Potência de sobra</p>
+    </div>
+  </a>
+
+  <a class="small-card">
+    <div class="small-card__img">
+      <img src="https://ivmmotos.com.br/wp-content/uploads/2023/09/1858a3c31ee34828b9b82d93214bdbae_1691093825534.jpg"
+        alt="" width="250px">
+    </div>
+    <div class="small-card__head">
+      <h3>DUCATI ST. FIGHTER V4 S</h3>
+    </div>
+    <div class="small-card__content">
+      <p>R$ 58.990,00 + frete</p><br>
+      <p>Motor 1103 CC</p>
+      <p>Ano 2021</p><br>
+    </div>
+  </a>
+</div>
+
