--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -8,17 +8,27 @@
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   height: 380px;
+  width: 390px;
   border-radius: 5px;
-  margin-top: 115px;
+  margin:115px 5px;
   text-decoration: none;
   transition: transform .8s;
+  padding: 5px;
 }
 
 .card:hover {
   transform: scale(1.01);
-  border: solid 2px grey;
+  border: solid 1px grey;
   height: 380px;
+  background-color: white;
+  -webkit-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.75);
 }
 
 .card-img > img{
