--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,7 +11,7 @@
     </ul>
   </div>
   <div class="footer-social">
-    <img src="https://o.remove.bg/downloads/c241ab7e-02e6-4266-a0c9-e4cf12efbd5f/00e89b137ef005ac96cfe777deeb4a21-removebg-preview.png" alt="" width="200px">
+    <img src="assets/kawasaki-logo.png" alt="" width="200px">
   </div>
   <div class="footer-copy">
     Copyright © 2023. Todos os direitos reservados.
