--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,4 +1,5 @@
 .menu-bar__container {
+  margin: 0;
   position: fixed;
   z-index: 999;
   display: flex;
@@ -8,6 +9,9 @@
   width: 100%;
   background-color: white;
   overflow: hidden;
+  -webkit-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.75);
 }
 
 .menu-bar__logo {
