--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -19,7 +19,10 @@
   cursor: pointer;
   transform: scale(1.03);
   border-radius: 10px;
-
+  background-color: white;
+  -webkit-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.75);
 }
 
 .small-card__img > img{
@@ -39,6 +42,15 @@
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: .8rem;
+}
+
+.section-name {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: black;
+
 }
 
 
