adição de nova seção

--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,5 +1,5 @@
-<div class="section-name">
-  <h2>Destaques</h2>
+<div class="section-name" id="destaques">
+  <h1>Destaques</h1>
 </div><br>
 
 <div class="small-card__container">
@@ -11,7 +11,7 @@
       <h3>Vulcan S</h3>
     </div>
     <div class="small-card__content">
-      <p>49.990,00 + frete</p><br>
+      <p>R$ 49.990,00 + frete</p><br>
       <p>Motor bicilíndrico paraleo de 649 CC.</p>
       <p>Chassi e Suspensão derivados das SPORTIBIKES</p>
     </div>
@@ -59,18 +59,18 @@
       <p>Conectividade com o Smartphone.</p><br>
     </div>
   </a>
-</div><br>
+</div>
 
 <!--Seção semi-novas-->
 
-<div class="section-name">
-  <h2>Semi-novas</h2>
+<div class="section-name" id="seminovas">
+  <h1>Semi-novas</h1>
 </div>
 
 <div class="small-card__container">
   <a class="small-card">
     <div class="small-card__img">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVqrRAa6-3Xh1-sxZGdR8h2moVavYppBAqiQ&usqp=CAU"
+      <img src="https://motobh.com.br/wp-content/uploads/2022/11/CBR-1000R-RR-vermelho.webp"
         alt="" width="250px">
     </div>
     <div class="small-card__head">
@@ -85,7 +85,7 @@
 
   <a class="small-card">
     <div class="small-card__img">
-      <img src="https://motonewsbrasil.com/wp-content/uploads/2019/03/yamaha-mt-15-7.jpg"
+      <img src="https://cdn.motor1.com/images/mgl/ER1AR/s1/2021-yamaha-mt-15.jpg"
         alt="" width="250px">
     </div>
     <div class="small-card__head">
@@ -100,22 +100,22 @@
 
   <a class="small-card">
     <div class="small-card__img">
-      <img src="https://motobr.files.wordpress.com/2011/08/bandit_992.jpg"
+      <img src="https://bike.net/res/media/img/oy800/ref/8ae/48618.jpg"
         alt="" width="250px">
     </div>
     <div class="small-card__head">
       <h3>SUZUKI BANDIT 1200 S</h3>
-    </div><br><br>
+    </div>
     <div class="small-card__content">
-      <p>R$ 93.990,00 + frete</p>
+      <p>R$ 93.990,00 + frete</p><br>
       <p>Ano 2008 com baxíssima KM</p>
-      <p>Potência de sobra</p>
+      <p>Potência de sobra</p><br>
     </div>
   </a>
 
   <a class="small-card">
     <div class="small-card__img">
-      <img src="https://ivmmotos.com.br/wp-content/uploads/2023/09/1858a3c31ee34828b9b82d93214bdbae_1691093825534.jpg"
+      <img src="https://images.ctfassets.net/x7j9qwvpvr5s/Gu4QM2NlKTVkGeJ9Du9YT/8e279699e4d94fff2846b1fe5dec7972/Streetfighter-V4-Red-Y20-04-Gallery-1920x1080.jpg"
         alt="" width="250px">
     </div>
     <div class="small-card__head">
@@ -129,3 +129,62 @@
   </a>
 </div>
 
+<div class="small-card__container">
+  <a class="small-card">
+    <div class="small-card__img">
+      <img src="https://www.motoo.com.br/fotos/2022/2/1280_960/honda_hornet_2014_9_07022022_48417_1280_960.jpg" alt="" width="250px">
+    </div>
+    <div class="small-card__head">
+      <h3>Honda CB 600F</h3>
+    </div>
+    <div class="small-card__content">
+      <p>49.990,00 + frete</p><br>
+      <p>Motor 598 CC.</p>
+      <p>Chassi diamantado</p>
+    </div>
+  </a>
+
+  <a class="small-card">
+    <div class="small-card__img">
+      <img src="https://armazemdovovo.com.br/images/anuncios/48916-seq-2-10-classico-0354.jpg" alt="" width="250px">
+    </div>
+    <div class="small-card__head">
+      <h3>HONDA SHADOW 750</h3>
+    </div>
+    <div class="small-card__content">
+      <p>R$ 50.990,00 + frete</p><br>
+      <p>Motor 749 CC</p>
+      <p>Indicador de pilotagem econômica.</p><br>
+    </div>
+  </a>
+
+  <a class="small-card">
+    <div class="small-card__img">
+      <img src="https://carroemotos.com.br/wp-content/uploads/2022/06/hd3.jpg" alt="" width="250px">
+    </div>
+    <div class="small-card__head">
+      <h3>HD SPORTSTER 883</h3>
+    </div>
+    <div class="small-card__content">
+      <p>R$ 93.990,00 + frete</p><br>
+      <p>Ano 2008 com baxíssima KM</p>
+      <p>Potência de sobra</p><br>
+    </div>
+  </a>
+
+  <a class="small-card">
+    <div class="small-card__img">
+      <img
+        src="https://roadgarage.com.br/wp-content/uploads/2023/04/B7D5E045-E871-4B31-B4E8-86AE21FA8232-scaled.jpeg"
+        alt="" width="250px">
+    </div>
+    <div class="small-card__head">
+      <h3>HD FAT BOY 103</h3>
+    </div>
+    <div class="small-card__content">
+      <p>R$ 118.990,00 + frete</p><br>
+      <p>Motor 1690 CC</p>
+      <p>Ano 2021</p><br>
+    </div>
+  </a>
+</div>
