--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,18 +1,18 @@
 <div class="menu-bar__container">
 
   <div class="menu-bar__logo">
-    <a><img src="https://fontmeme.com/permalink/230930/48bda0910ea0f4ee979bc3f09e79a4e7.png" alt="fuente-overused-grotesk"
+    <a href="#"><img src="https://fontmeme.com/permalink/230930/48bda0910ea0f4ee979bc3f09e79a4e7.png" alt="fuente-overused-grotesk"
         border="0" width="100px"></a>
-    <a> <!--"https://fontmeme.com/es/fuente-de-cobra-kai/"-->
+    <a href="#"> <!--"https://fontmeme.com/es/fuente-de-cobra-kai/"-->
       <img src="https://fontmeme.com/permalink/230930/6cba9edbd62c96e7800c11b1003178cd.png" alt="fuente-de-cobra-kai"
         border="0" width="170px"></a>
         <h6>Consultora de Vendas - Tokio Kawasaki</h6>
   </div>
   <div class="menu-bar__menu">
     <ul class="menu-bar__nav">
-      <li><a href="">Início</a></li>
-      <li><a href="">Motocicletas</a></li>
-      <li><a href="">Dúvidas</a></li>
+      <li><a href="#">Início</a></li>
+      <li><a href="#destaques">Novas</a></li>
+      <li><a href="#seminovas">Seminovas</a></li>
       <li><a href="">Whatsapp</a></li>
     </ul>
   </div>
